--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,24 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html {
-  block-size: 100%;
+	block-size: 100%;
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: auto;
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  background-color: #1b1919;
+	inline-size: 1200px;
+	block-size: 100%;
+	margin: auto;
+	color: #fff;
+	font-family: 'Fira Sans Condensed', sans-serif;
+	font-size: 18px;
+	background-color: #1b1919;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 h1,
@@ -28,11 +31,160 @@ ol,
 li,
 blockquote,
 fieldset {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 ul,
 ol {
-  list-style: none;
+	list-style: none;
+}
+
+.content {
+	display: flex;
+	align-items: flex-end;
+	width: 1140px;
+	gap: 30px;
+}
+
+.search-form {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+.content__details {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 26px;
+}
+.content__list {
+	position: relative;
+	height: 298px;
+  overflow-y: scroll;
+}
+
+
+.result__video-container {
+	position: relative;
+	width: 711px;
+	height: 386px;
+	margin-bottom: 16px;
+}
+.result__video {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.content__list-item {
+	padding-bottom: 30px;
+}
+.content__list-item:last-child {
+	padding: 0;
+}
+
+.content__video-card {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.content__video-card-thumbnail {
+	width: 194px;
+	height: 103px;
+  object-fit: cover;
+}
+.content__video-card-description-container {
+	width: 100%;
+	height: 100%;
+}
+
+.search-form__fieldset-title {
+	color: #fff;
+	font-family: Fira Sans Condensed;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+.title {
+	color: #fff;
+	font-family: Oswald;
+	font-size: 75px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 94%;
+	text-transform: uppercase;
+}
+.content__accent {
+	color: #545050;
+	font-family: Oswald;
+	font-size: 75px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 94%; /* 70.5px */
+	text-transform: uppercase;
+}
+
+.content__video-card-title {
+	color: #fff;
+	font-family: Oswald;
+	font-size: 30px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 100%; /* 30px */
+	text-transform: uppercase;
+}
+.content__card-link {
+	text-decoration: none;
+	color: #fff;
+	font-family: Fira Sans Condensed;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 16.2px; /* 90% */
+}
+
+.visually-hidden {
+	position: absolute;
+	inline-size: 1px;
+	block-size: 1px;
+	overflow: hidden;
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	white-space: nowrap;
+}
+
+fieldset {
+	border: none;
+}
+
+.search-form__label {
+	width: fit-content;
+	color: rgba(255, 255, 255, 0.7);
+	font-family: Fira Sans Condensed;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	appearance: none;
+}
+.button {
+  align-self: flex-end;
+	border: 1px solid #fff;
+	width: 194px;
+	height: 34px;
+	background-color: #1b1919;
+}
+.search-form__submit-button {
+	color: #fff;
+	text-align: center;
+	font-family: Fira Sans Condensed;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+  cursor: pointer;
 }
